Feat: 하나의 서비스로 진행